--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                   </ul>
                 </div>
               </nav>
-              
-             <div class="col-lg-6">They say the best way to make an impression is to start with an icebraker. So as to keep up to the traditional social interactions here we go; Hello, you look a lot like my new boss! You're here for one of two reasons. Either I gave you this link, or somehow you've fallen down quite a few "rabbit holes". Either way, welcome to the wonderland that is me! I am a very hard working, passion driven person who is always ready to learn new things! A few things I enjoy personally are; Anime, video games, movies, shows, and music!</div>
+              <img src="img/myphoto.jpg" alt="my photo">
+             <div class="col-lg-6">They say the best way to make an impression is to start with an icebraker. So as to keep up to the traditional social interactions here we go; Hello, you look a lot like my new boss! You're here for one of two reasons. Either I gave you this link, or somehow you've fallen down quite a few "rabbit holes". Either way, welcome to the wonderland that is me! I am a very hard working, passion driven person who is always ready to learn new things! A few things I enjoy personally are; Anime, video games, movies, shows, and music!</div> 
 
 </body>
    
